remove tinydb from playground

--- a/docs/playground.ipynb
+++ b/docs/playground.ipynb
@@ -17,7 +17,7 @@
     "## install dependencies \n",
     "\n",
     "We dont install mongodb because it is not available in pure python so cannot be used in pyolite.\n",
-    "instead we use tinydb for demonstration but all features that work with tinydb work with mongodb"
+    "instead we use a pandas dataframe for demonstration but all features work the same with a mongodb collection as a datasource"
    ]
   },
   {
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import piplite\n",
-    "await piplite.install('xedocs', 'tinydb')"
+    "\n",
+    "await piplite.install('xedocs')"
    ]
   },
   {
@@ -55,56 +55,12 @@
     "\n",
     "url = \"https://raw.githubusercontent.com/XENONnT/xedocs/master//test_data/pmt_gains_random_data.csv\"\n",
     "\n",
-    "data = await fetch(url).text()\n",
+    "r = await fetch(url)\n",
+    "data = await r.text()\n",
     "f = io.StringIO(data)\n",
     "\n",
-    "df = pd.read_csv(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31d2de29",
-   "metadata": {},
-   "source": [
-    "## Initialize a DB\n",
-    "We initialize a tinyDB database for deonstration but we could also have used the dataframe directly as a datasource"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "929e12ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tinydb import TinyDB\n",
-    "from tinydb.storages import MemoryStorage\n",
-    "\n",
-    "db = TinyDB(storage=MemoryStorage)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cfa35e7",
-   "metadata": {},
-   "source": [
-    "## Insert data\n",
-    "We can use xedocs to insert data into the DB, this process is the same for any datasource you use.\n",
-    "The datasource can also be a dataframe, a list of records or a mongodb collection."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "083c70e0-3077-45ae-a399-cc655d091cac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import xedocs\n",
-    "\n",
-    "for row in df.to_dict(orient='records'):\n",
-    "    doc = xedocs.PmtGain(**row)\n",
-    "    doc.save(db)"
+    "df = pd.read_csv(f)\n",
+    "df['time'] = pd.to_datetime(df['time'])"
    ]
   },
   {
@@ -114,14 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an arbitrary datetime object to demonstrate time based queries \n",
-    "import datetime\n",
     "\n",
+    "import datetime\n",
+    "import xedocs\n",
+    "\n",
+    "# Create an arbitrary datetime object to demonstrate time based queries \n",
     "dtime = datetime.datetime(2022, 4, 4, 8, 1, 1)\n",
     "\n",
-    "xedocs.PmtGain.find_one(df, version='ONLINE', time=dtime, pmt=444)\n",
-    "# here if we had access to the runs db (utilix installed), we could have passed run_id=XXXXX instead of the time\n",
-    "# and it would use the center time of the run."
+    "# here if we had access to the runs db (utilix installed), we could also pass run_id=XXXXX instead of the time\n",
+    "# and it would use the center time of the run.\n",
+    "xedocs.PmtGain.find_one(df, version='ONLINE', time=dtime, pmt=444)\n"
    ]
   },
   {
@@ -143,7 +101,7 @@
     "# The straxen.frames namespace holds a collection\n",
     "# of remote frames for all defined corrections\n",
     "\n",
-    "gains_rf = xedocs.PmtGain.rframe(db)"
+    "gains_rf = xedocs.PmtGain.rframe(df)"
    ]
   },
   {
