--- a/docs/playground.ipynb
+++ b/docs/playground.ipynb
@@ -133,7 +133,7 @@
     "# calling the .sel() method returns a pandas\n",
     "# dataframe with the selection result\n",
     "\n",
-    "df = gains_rf.sel(detector='tpc', version='v1', time=dtime)\n",
+    "df = gains_rf.sel(detector='tpc', version='ONLINE', time=dtime).df\n",
     "df"
    ]
   },
@@ -155,7 +155,7 @@
     "# pandas style multi-indexing also returns a pandas\n",
     "# dataframe with the selection result\n",
     "\n",
-    "df = gains_rf.loc['v1',dtime,'tpc',:]\n",
+    "df = gains_rf.loc['ONLINE',dtime,'tpc'].df\n",
     "df"
    ]
   },
@@ -176,7 +176,7 @@
    "source": [
     "# pandas api\n",
     "\n",
-    "gains_rf.at[('v1',dtime,'tpc',1), 'value']"
+    "gains_rf.at[('ONLINE',dtime,'tpc',344), 'value']"
    ]
   },
   {
@@ -188,7 +188,7 @@
    "source": [
     "# simple callable\n",
     "\n",
-    "gains_rf('value', detector='tpc', version='v1', time=dtime, pmt=1)"
+    "gains_rf('value', detector='tpc', version='ONLINE', time=dtime, pmt=344)"
    ]
   }
  ],
