refactor datasource registering

--- a/notebooks/basics.ipynb
+++ b/notebooks/basics.ipynb
@@ -47,38 +47,53 @@
    "metadata": {},
    "source": [
     "## Bodega\n",
-    "Bodega (detector parameters) is a perfect example of a collection of versioned documents which share a commong schema. The first step in migrating Bodega to CMT2.0 is defining the schema, this code can be found in `straxen/correction/bodega.py`\n",
+    "Bodega (detector parameters) is a simple example of a collection of versioned documents which share a common schema. The first step in migrating Bodega to CMT2.0 is defining the schema, this code can be found in `xedocs/schema/detector_numbers.py`\n",
     "\n",
     "```python\n",
     "\n",
-    "import strax\n",
     "import rframe\n",
     "import datetime\n",
     "\n",
-    "from .base_corrections import BaseCorrectionSchema\n",
+    "from .base_schemas import VersionedXeDoc\n",
+    "from .constants import PARTITION\n",
     "\n",
-    "export, __all__ = strax.exporter()\n",
     "\n",
+    "class DetectorNumber(VersionedXeDoc):\n",
+    "    \"\"\"Detector parameters\n",
+    "    A collection of non-time dependent detector\n",
+    "    values.\n",
+    "    \"\"\"\n",
     "\n",
-    "@export\n",
-    "class Bodega(BaseCorrectionSchema):\n",
-    "    '''Detector parameters\n",
-    "       A collection of non-time dependent detector\n",
-    "       values.\n",
-    "    '''\n",
-    "    _NAME = 'bodega'\n",
-    "    \n",
-    "    field: str = rframe.Index()\n",
+    "    _ALIAS = \"detector_numbers\"\n",
+    "\n",
+    "    field: str = rframe.Index(max_length=80)\n",
+    "    partition: PARTITION = rframe.Index(default=\"all_tpc\")\n",
     "\n",
     "    value: float\n",
     "    uncertainty: float\n",
     "    definition: str\n",
-    "    reference: str\n",
+    "    reference: str = \"\"\n",
     "    date: datetime.datetime\n",
+    "    comments: str = \"\"\n",
+    "\n",
     "\n",
     "```\n",
     "\n",
-    "Notice that we inherit from the `BaseCorrectionSchema` class, so the `version` field is already defined for us. We add an additional index called `field` which will store the field name of the document. The rest of the schema is simply copied from the structure of the bodega json collection. Standard python type hints can be used to enforce the field types. All `pydantic` fields are supported by the framework but a given data storage backend may have some constraints.\n"
+    "Notice that we inherit from the `VersionedXeDoc` class, so the `version` field is already defined for us. We add an additional index called `field` which will store the field name of the document. The rest of the schema is simply copied from the structure of the bodega json collection. Standard python type hints can be used to enforce the field types. All `pydantic` fields are supported by the framework but a given data storage backend may have some constraints.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "325599fd",
+   "metadata": {},
+   "source": [
+    "### Reistering a datasource\n",
+    "\n",
+    "Datasources can be registered with the `register_datasource` method. This method takes any supported datasource such as a pandas dataframe, a mongodb collection, json list or an fsspec path to a file:\n",
+    "\n",
+    "```python\n",
+    "Schema.register_datasource('github://org:repo@/path/to/file.csv', name='github')\n",
+    "```"
    ]
   },
   {
@@ -87,7 +102,17 @@
    "metadata": {},
    "source": [
     "### Query interface\n",
-    "Querying a specific datasource can be done using the query api. `Schema.find(datasource, version='v1', field=...)` will return a list of matching documents and `Schema.find_one(datasource, version='v1', field=...)` will return the first match. Each document will be an instance of the schema class. If you do not pass a datasource to the query methods, the default datasource will be queried."
+    "Querying a specific datasource can be done using the query api. `Schema.datasource.find_docs(version='v1', field=...)` will return a list of matching documents and `Schema.datasource.find_one(datasource, version='v1', field=...)` will return the first match. Each document will be an instance of the schema class. If you do not pass a datasource to the query methods, the default datasource will be queried."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfebbcd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xedocs.schemas import DetectorNumber"
    ]
   },
   {
@@ -97,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drift_velocities = xedocs.Bodega.find(field='drift_velocity')\n",
+    "drift_velocities = DetectorNumber.staging.find_docs(field='drift_velocity')\n",
     "drift_velocity = drift_velocities[0]"
    ]
   },
@@ -108,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drift_velocity = xedocs.Bodega.find_one(field='drift_velocity', version='v1')\n",
+    "drift_velocity = DetectorNumber.staging.find_one(field='drift_velocity', version='v1')\n",
     "drift_velocity"
    ]
   },
@@ -139,39 +164,63 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f683eeb5",
+   "metadata": {},
+   "source": [
+    "### Datasource contexts\n",
+    "To easily access common datasources, you can load the appropriate context and use tab completion to discover registered datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de0a94d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Production DB\n",
+    "db = xedocs.production_db()\n",
+    "\n",
+    "\n",
+    "# Staging DB\n",
+    "db = xedocs.staging_db() \n",
+    "\n",
+    "\n",
+    "doc = db.pmt_gains.find_one(version='v1', pmt=0, run_id='020000')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f36c213f-06e3-4f7e-8507-3a2da68b934d",
    "metadata": {},
    "source": [
     "## Fax Configs\n",
-    "The WFSim configuration has also been migrated to the CMT2.0 framework in `xedocs/corrections/fax.py`, the schema definition is as followes:\n",
+    "The WFSim configuration has also been migrated to the CMT2.0 framework in `xedocs/schemas/fax.py`, the schema definition is as followes:\n",
     "\n",
     "```python\n",
-    "import strax\n",
-    "import rframe\n",
-    "\n",
     "from typing import Literal, Union\n",
     "\n",
-    "from .base_corrections import BaseCorrectionSchema\n",
+    "import rframe\n",
     "\n",
-    "export, __all__ = strax.exporter()\n",
+    "from .base_schemas import VersionedXeDoc\n",
     "\n",
     "\n",
+    "class FaxConfig(VersionedXeDoc):\n",
+    "    \"\"\"fax configuration values for WFSim\"\"\"\n",
     "\n",
-    "@export\n",
-    "class FaxConfig(BaseCorrectionSchema):\n",
-    "    '''fax configuration values for WFSim\n",
-    "    '''\n",
-    "    _NAME = 'fax_configs'\n",
+    "    _ALIAS = \"fax_configs\"\n",
+    "\n",
     "    class Config:\n",
     "        smart_union = True\n",
-    "        \n",
-    "    field: str = rframe.Index()\n",
-    "    experiment: Literal['1t','nt','nt_design'] = rframe.Index(default='nt')\n",
-    "    detector: Literal['tpc', 'muon_veto', 'neutron_veto'] = rframe.Index(default='tpc')\n",
-    "    science_run: str = rframe.Index()\n",
-    "    version: str = rframe.Index(default='nt')\n",
     "\n",
-    "    value: Union[int,float,bool,str,list,dict]\n",
+    "    field: str = rframe.Index()\n",
+    "    experiment: Literal[\"1t\", \"nt\", \"nt_design\"] = rframe.Index(default=\"nt\")\n",
+    "    detector: Literal[\"tpc\", \"muon_veto\", \"neutron_veto\"] = rframe.Index(default=\"tpc\")\n",
+    "    science_run: str = rframe.Index()\n",
+    "    version: str = rframe.Index(default=\"v1\")\n",
+    "\n",
+    "    value: Union[int, float, bool, str, list, dict]\n",
     "    resource: str\n",
     "\n",
     "\n",
@@ -187,18 +236,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s2_secondary_sc_gain = xedocs.FaxConfig.find_one(field='s2_secondary_sc_gain', version='v0')\n",
+    "\n",
+    "s2_secondary_sc_gain = db.fax_configs.find_one(field='s2_secondary_sc_gain', version='v0')\n",
     "s2_secondary_sc_gain.value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77a977df-2ae6-4018-ab64-e3dcb5282045",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xedocs.FaxConfig.get_column_fields()"
    ]
   },
   {
@@ -208,70 +248,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fax_configs = xedocs.FaxConfig.find(experiment='nt', version='v0')\n",
-    "fax_configs[:2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d65218f2-d450-45ac-896c-85a1cb57c55d",
-   "metadata": {},
-   "source": [
-    "### Resource References\n",
-    "Documents which reference an external resource should inherit from `xedocs.BaseResourceReference` and can define a fmt property which will be used to fetch the resource when the `.load()` method is called.\n",
-    "\n",
-    "Example: Position reconstruction models\n",
-    "\n",
-    "```python\n",
-    "\n",
-    "import strax\n",
-    "import rframe\n",
-    "import datetime\n",
-    "from typing import Literal\n",
-    "from .base_references import BaseResourceReference\n",
-    "\n",
-    "export, __all__ = strax.exporter()\n",
-    "\n",
-    "\n",
-    "@export\n",
-    "class PosRecModel(BaseResourceReference):\n",
-    "    _NAME = \"posrec_models\"\n",
-    "    fmt = 'json'\n",
-    "\n",
-    "    kind: Literal['cnn','gcn','mlp'] = rframe.Index()\n",
-    "    time: rframe.Interval[datetime.datetime] = rframe.IntervalIndex()\n",
-    "\n",
-    "    value: str\n",
-    "\n",
-    "\n",
-    "```\n",
-    "\n",
-    "Here we use the `typing.Literal` generic to define a field that can only be one of three model types and set it to be an index field.\n",
-    "We also introduce an additional time field which is of type Interval and references the validity interval of the model. Setting it to be an IntervalIndex means that queries will be matched by overlap instead of exact value matching."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13a32de2-7311-4c04-9a76-cb27fd1b65f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_name = straxen.PosRecModel.find_one(version='v1', time=dtime)\n",
-    "\n",
-    "# The value field contains the resource name\n",
-    "model_name.value\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c24a562-dad6-48fc-aa92-b8d38046d6ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calling the load method loads the actual model using xedocs.get_resource().\n",
-    "model = model_name.load()\n"
+    "# Get results as a dataframe \n",
+    "fax_configs = db.fax_configs.find_df(experiment='nt', version='v0')\n",
+    "fax_configs"
    ]
   },
   {
@@ -293,7 +272,7 @@
     "# The straxen.frames namespace holds a collection\n",
     "# of remote frames for all defined corrections\n",
     "\n",
-    "gains_rf = xedocs.frames.pmt_gains"
+    "gains_rf = db.pmt_gains.rframe()"
    ]
   },
   {
@@ -384,103 +363,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35472308-c1b5-4bef-8a8a-8c2e226c3e56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "fd7a2c2b",
+   "id": "736e0645",
    "metadata": {},
    "source": [
-    "# Global Versions\n",
-    "The concept of a global version in CMT2.0 is generalized to a collection of versioned documents where each document references one or more documents in another versioned collection. The schema is implemented in `xedocs/corrections/global_versions.py` and is as follows:\n",
+    "### Inserting new documents\n",
+    "New documents can be saved either by creating a new instance of the Schema class and calling the `.save(datasource)` method or by calling the `insert(docs)` method on the datasource accessor.\n",
     "\n",
-    "```python\n",
-    "\n",
-    "\n",
-    "@export\n",
-    "class GlobalVersion(TimeIntervalCorrection):\n",
-    "    '''A GlobalVersion document references one or \n",
-    "    more corrections by storing the name and labels required\n",
-    "    to locate the correction in a datasource     \n",
-    "    '''\n",
-    "    _NAME = 'global_versions'\n",
-    "\n",
-    "    # arbitrary alias for this reference,\n",
-    "    # this should match the xedocs config name\n",
-    "    alias: str = rframe.Index() \n",
-    "\n",
-    "    # the global version\n",
-    "    version: str = rframe.Index()\n",
-    "\n",
-    "    # validity interval of the document\n",
-    "    time: rframe.Interval[datetime.datetime] = rframe.IntervalIndex()\n",
-    "\n",
-    "    # Name of the correction being referenced\n",
-    "    correction: str\n",
-    "\n",
-    "    # The attribute in the correction being referenced e.g `value`\n",
-    "    attribute: str\n",
-    "\n",
-    "    # The index labels being referenced, eg pmt=[1,2,3], version='v3' etc.\n",
-    "    labels: dict\n",
-    "\n",
-    "    def load(self, datasource=None, **overrides):\n",
-    "        ''' Load the referenced documents\n",
-    "        '''\n",
-    "        labels = dict(self.labels, **overrides)\n",
-    "        if self.correction not in BaseCorrectionSchema._SCHEMAS:\n",
-    "            raise KeyError(f'Reference to undefined schema name {self.correction}')\n",
-    "        schema = BaseCorrectionSchema._SCHEMAS[self.correction]\n",
-    "        return schema.find(datasource, **labels)\n",
-    "\n",
-    "    @property\n",
-    "    def url_config(self):\n",
-    "        '''Convert reference to a URLConfig URL\n",
-    "        '''\n",
-    "        url = f'{self.correction}://{self.attribute}'\n",
-    "        url = straxen.URLConfig.format_url_kwargs(url, **self.labels)\n",
-    "        return url\n",
-    "\n",
-    "    @property\n",
-    "    def config_dict(self):\n",
-    "        return {self.name: self.url_config}\n",
-    "\n",
-    "    @classmethod\n",
-    "    def get_global_config(cls, version, datasource=None, names=None, extra_labels=None):\n",
-    "        '''Build a context config from the given global version.\n",
-    "        '''\n",
-    "        if extra_labels is None:\n",
-    "            extra_labels = dict(run_id='plugin.run_id')\n",
-    "        refs = cls.find(datasource, version=version, alias=names)\n",
-    "        config = {}\n",
-    "        for ref in refs:\n",
-    "            url = ref.url_config\n",
-    "            if extra_labels is not None:\n",
-    "                url = straxen.URLConfig.format_url_kwargs(url, **extra_labels)\n",
-    "            config[ref.alias] = url\n",
-    "        return config\n",
-    "\n",
-    "```"
+    "Before inserting the new data, xedocs will run any checks defined on the schema and raise an error if any check fails."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad9410ef",
+   "id": "35472308-c1b5-4bef-8a8a-8c2e226c3e56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import straxen\n",
+    "data = {'pmt': 0, 'value': 1.0, 'version': 'v1', 'time': dtime, 'detector': 'tpc'}\n",
+    "db.pmt_gains.insert(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c199709",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymongo\n",
+    "datasource = pymongo.MongoClient('mongodb://localhost:27017')['xedocs']['pmt_gains']\n",
     "\n",
-    "st = straxen.contexts.xenonnt()\n",
-    "config = xedocs.GlobalVersion.get_global_config('v1')\n",
-    "\n",
-    "st.set_config(config)"
+    "doc = xedocs.schemas.PmtGain(**data)\n",
+    "doc.save(datasource)"
    ]
   }
  ],
