--- a/notebooks/example_plugin.ipynb
+++ b/notebooks/example_plugin.ipynb
@@ -36,7 +36,8 @@
     "                                  '&detector=tpc'\n",
     "                                  '&run_id=plugin.run_id'\n",
     "                                  '&attr=value'\n",
-    "                                  '&sort=pmt',\n",
+    "                                  '&sort=pmt'\n",
+    "                                  '&as_list=True',\n",
     "                        cache=True)\n",
     "\n",
     "    depends_on = ('event_basics',)\n",
@@ -49,9 +50,6 @@
     "        ('gain_average', np.float64, 'Average tpc gains'),\n",
     "        ('gain_std', np.float64, 'stdv of tpc gains'),\n",
     "        ]\n",
-    "\n",
-    "    \n",
-    "\n",
     "\n",
     "    def compute(self, events):\n",
     "        gains = self.tpc_gains\n",
