--- a/notebooks/basics.ipynb
+++ b/notebooks/basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "083c70e0-3077-45ae-a399-cc655d091cac",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Create an arbitrary datetime object to demonstrate time based queries \n",
-    "dtime = datetime.datetime(2019, 2, 16, 13, 10, 4, 781502)"
+    "dtime = datetime.datetime(2020, 5, 16, 13, 10, 4, 781502)"
    ]
   },
   {
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "Processing XENON data requires a large amount of detector parameters, correction information and other metadata not produced in the plugin dependency chain. The goal of CMT2.0 is to offer a way to define a schema and common interface for accessing this data from multiple data sources such as mongodb, pandas dataframes and API servers. The schema definition enforces consistent and uniform data and the common interface prevents hard coding of data access details in the plugins, notebooks and scripts that use the data. This allows analysts to easily switch out the data source for eg testing, development or when a database connection is not available."
+    "Processing XENON data requires a large amount of detector parameters, correction information and other metadata not produced in the plugin dependency chain. These metadata collections have unique version control requirements. The xedocs package is a collection of schemas and interfaces for accessing this data from multiple data sources such as mongodb, pandas dataframes and API servers. The schema definition enforces consistent and uniform data and the common interface prevents hard coding of data access details in the plugins, notebooks and scripts that use the data. This allows analysts to easily switch out the data source for eg testing, development or when a database connection is not available."
    ]
   },
   {
@@ -36,9 +36,9 @@
    "id": "3960fa8a-26cc-475e-8f7f-4b6603e9eed9",
    "metadata": {},
    "source": [
-    "## Versioned documents\n",
-    "The scope of CMT has been generalized to include all versioned documents. A collection of versioned documents has at least one index field named `version` and a common schema for all documents. The set of all index fields for each document of a given schema must be unique. By default collections are insert-only, meaning you cannot change the values for an already set index.\n",
-    "All versioned documents in xedocs should inherit from `xedocs.BaseCorrectionSchema` or one of its subclasses"
+    "## Indexed documents\n",
+    "The scope of xedocs has been generalized to include all indexed metadata, including versioned metadata. A collection of documents has at least one index field and a common schema for all documents. The set of all index fields for each document of a given schema must be unique. By default correction collections are insert-only, meaning you cannot change the values for an already set index.\n",
+    "All schemas in xedocs should inherit from `xedocs.schemas.XeDoc` or one of its subclasses."
    ]
   },
   {
@@ -46,8 +46,8 @@
    "id": "558d4b32-5a27-4785-9bf9-b52894a9cd6e",
    "metadata": {},
    "source": [
-    "## Bodega\n",
-    "Bodega (detector parameters) is a simple example of a collection of versioned documents which share a common schema. The first step in migrating Bodega to CMT2.0 is defining the schema, this code can be found in `xedocs/schema/detector_numbers.py`\n",
+    "## Detector Numbers (Bodega)\n",
+    "Bodega (detector parameters) is a simple example of a collection of versioned documents which share a common schema. The first step in migrating Bodega to xedocs is defining the schema, this code can be found in `xedocs/schema/detector_numbers.py`\n",
     "\n",
     "```python\n",
     "\n",
@@ -60,8 +60,8 @@
     "\n",
     "class DetectorNumber(VersionedXeDoc):\n",
     "    \"\"\"Detector parameters\n",
-    "    A collection of non-time dependent detector\n",
-    "    values.\n",
+    "    A characteristic value of our detector \n",
+    "    used in analysis, that is constant in time.\n",
     "    \"\"\"\n",
     "\n",
     "    _ALIAS = \"detector_numbers\"\n",
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drift_velocities = DetectorNumber.staging.find_docs(field='drift_velocity')\n",
+    "drift_velocities = DetectorNumber.staging_db.find_docs(field='drift_velocity')\n",
     "drift_velocity = drift_velocities[0]"
    ]
   },
@@ -133,8 +133,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "drift_velocity = DetectorNumber.staging.find_one(field='drift_velocity', version='v1')\n",
+    "drift_velocity = DetectorNumber.staging_db.find_one(field='drift_velocity', version='v1')\n",
     "drift_velocity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ddacb5b-5ad1-41a1-9581-e15602297822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v1_df = DetectorNumber.staging_db.find_df(version='v1')\n",
+    "v1_df"
    ]
   },
   {
@@ -159,7 +170,7 @@
     "drift_velocity.dict()\n",
     "\n",
     "# convert to json string\n",
-    "drift_velocity.json()"
+    "print(drift_velocity.json(indent=1))"
    ]
   },
   {
@@ -167,7 +178,7 @@
    "id": "f683eeb5",
    "metadata": {},
    "source": [
-    "### Datasource contexts\n",
+    "## Datasource contexts\n",
     "To easily access common datasources, you can load the appropriate context and use tab completion to discover registered datasets."
    ]
   },
@@ -178,6 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xedocs\n",
     "\n",
     "# Production DB\n",
     "db = xedocs.production_db()\n",
@@ -187,7 +199,54 @@
     "db = xedocs.staging_db() \n",
     "\n",
     "\n",
-    "doc = db.pmt_gains.find_one(version='v1', pmt=0, run_id='020000')\n"
+    "doc = db.pmt_gains.find_one(version='v1', pmt=0, run_id='020000')\n",
+    "doc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02cf815b-0684-4b47-9e8c-f2e52611d4d7",
+   "metadata": {},
+   "source": [
+    "## Operation reports\n",
+    "Xedocs is also used to store metadata about operations relavent to analysis, such as Anode ramps and calibrations.\n",
+    "You can find these datasets with xedocs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4637dc6f-2554-4ee3-9acc-c6ed29430ef4",
+   "metadata": {},
+   "source": [
+    "### Anode ramps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0b54618-3e4c-4ac4-bb07-4b99614a988b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.anode_ramps.find_df()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "191752ab-8609-4f43-9919-53787effdc27",
+   "metadata": {},
+   "source": [
+    "### U-tube calibrations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24ef9499-60e4-4405-9101-99eb6f68e196",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.utube_calibrations.find_df()"
    ]
   },
   {
@@ -248,7 +307,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get results as a dataframe \n",
+    "# Get results as a dataframe\n",
+    "\n",
     "fax_configs = db.fax_configs.find_df(experiment='nt', version='v0')\n",
     "fax_configs"
    ]
@@ -272,18 +332,17 @@
     "# The straxen.frames namespace holds a collection\n",
     "# of remote frames for all defined corrections\n",
     "\n",
-    "gains_rf = db.pmt_gains.rframe()"
+    "rf = db.pmt_gains.rframe"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "454edb55-31d1-43ae-b6ef-4ade4f89fc72",
+   "id": "36fb036b-3a5a-4941-83db-b9a3f7599b7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List the index names\n",
-    "gains_rf.index.names"
+    "db.pmt_gains.find_dicts(detector='tpc', version='v1', limit=2)"
    ]
   },
   {
@@ -304,7 +363,7 @@
     "# calling the .sel() method returns a pandas\n",
     "# dataframe with the selection result\n",
     "\n",
-    "df = gains_rf.sel(detector='tpc', version='v1', time=dtime)\n",
+    "df = rf.sel(detector='tpc', version='ONLINE', time=dtime)\n",
     "df"
    ]
   },
@@ -326,7 +385,7 @@
     "# pandas style multi-indexing also returns a pandas\n",
     "# dataframe with the selection result\n",
     "\n",
-    "df = gains_rf.loc['v1',dtime,'tpc',:]\n",
+    "df = rf.loc['v1',dtime,'tpc', 1]\n",
     "df"
    ]
   },
@@ -380,8 +439,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {'pmt': 0, 'value': 1.0, 'version': 'v1', 'time': dtime, 'detector': 'tpc'}\n",
-    "db.pmt_gains.insert(data)"
+    "data = {'pmt': 0, 'value': 1.0, 'version': 'test', 'time': dtime, 'detector': 'tpc'}\n",
+    "# db.pmt_gains.insert(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f442e5-03f3-4fda-8299-fdedf35a1667",
+   "metadata": {},
+   "source": [
+    "### Saving to a local database\n",
+    "You can create a new document and call the `.save` method with any supported writable datasource"
    ]
   },
   {
@@ -392,9 +460,11 @@
    "outputs": [],
    "source": [
     "import pymongo\n",
+    "from xedocs.schemas import PmtGain\n",
+    "\n",
     "datasource = pymongo.MongoClient('mongodb://localhost:27017')['xedocs']['pmt_gains']\n",
     "\n",
-    "doc = xedocs.schemas.PmtGain(**data)\n",
+    "doc = PmtGain(**data)\n",
     "doc.save(datasource)"
    ]
   }
@@ -404,9 +474,9 @@
    "hash": "8d4a9e3b1cf48e7d8286c31499bf7742482148cf175b8290d37db65f7b4a0399"
   },
   "kernelspec": {
-   "display_name": "straxen-dev",
+   "display_name": "xedocs",
    "language": "python",
-   "name": "python3"
+   "name": "xedocs"
   },
   "language_info": {
    "codemirror_mode": {
@@ -418,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
