change db accessing format

--- a/notebooks/Accessing_and_inserting_data.ipynb
+++ b/notebooks/Accessing_and_inserting_data.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xd_db_dev = xd.development_db.utilix"
+    "xd_db_dev = xd.development_db()"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xd_db_stx = xd.straxen_db.utilix"
+    "xd_db_stx = xd.straxen_db()"
    ]
   },
   {
